fixed thumbnails spacing for product page thumbnail images

--- a/public/sass/part.scss
+++ b/public/sass/part.scss
@@ -117,6 +117,7 @@
 						-webkit-box-shadow: 1px 0 10px 2px #ccc;
 						-moz-box-shadow: 1px 0 10px 2px #ccc;
 						box-shadow: 1px 0 10px 2px #ccc;
+						margin-right:10px;
 					}
 				}
 				.carousel-control{
